RESOLVED FIXED226882
[MSE] Prevent false-positive "stalled" event iff MSE used
https://bugs.webkit.org/show_bug.cgi?id=226882
Summary [MSE] Prevent false-positive "stalled" event iff MSE used
Enrique Ocaña
Reported 2021-06-10 09:22:09 PDT
"progress" and "stalled" events make no sense in context of MSE: https://github.com/w3c/media-source/issues/88 and hence they will likely be removed soon: https://w3c.github.io/media-source/#h-note-19
Attachments
Patch (5.29 KB, patch)
2021-06-10 09:36 PDT, Enrique Ocaña
no flags
Patch (7.08 KB, patch)
2021-09-06 08:51 PDT, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2021-06-10 09:36:05 PDT
Radar WebKit Bug Importer
Comment 2 2021-06-17 09:23:38 PDT
Alicia Boya García
Comment 3 2021-09-06 03:18:19 PDT
Comment on attachment 431089 [details] Patch LGTM, r+ conditional on tests not regressing.
Enrique Ocaña
Comment 4 2021-09-06 08:51:47 PDT
Enrique Ocaña
Comment 5 2021-09-06 08:54:24 PDT
Uploaded a new version of the patch. It doesn't require additional review because only a gardening-like change in the expectations of imported/w3c/web-platform-tests/media-source/mediasource-append-buffer-expected.html has been added, in order to avoid regressions in the tests.
EWS
Comment 6 2021-09-06 09:38:35 PDT
Committed r282059 (241359@main): <https://commits.webkit.org/241359@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437419 [details].
Carlos Alberto Lopez Perez
Comment 7 2021-09-06 18:39:00 PDT
(In reply to EWS from comment #6) > Committed r282059 (241359@main): <https://commits.webkit.org/241359@main> > > All reviewed patches have been landed. Closing bug and clearing flags on > attachment 437419 [details]. This made the test media/media-source/media-source-stalled-holds-sleep-assertion.html to timeout. Check bug 229979
Note You need to log in before you can comment on or make changes to this bug.